wrap problem is solved

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -6,5 +6,9 @@
     flex-wrap: wrap;
     padding: 50px 0;
     margin: 0 auto;
+
+    @media (max-width: 1024px) {
+      min-width: 4*$card-width + 3*$card-gap;
+    }
   }
 }
